z-index fixes, small features on all utils

--- a/atoms/Backdrop.module.scss
+++ b/atoms/Backdrop.module.scss
@@ -24,6 +24,6 @@
 
 	&.fixed {
 		position: fixed;
-		z-index: 5;
+		z-index: 40;
 	}
 }
